添加百度统计

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,16 @@
 
     {% include footer.html %}
 
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?30ad5e25fdc610ae1e11b52e94d04500";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    <!-- 百度统计代码 -->
   </body>
 
 </html>
