--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -236,7 +236,12 @@
 }
 
 
+/**
+ * table
+ */
 table {
+  border-spacing: 0;
+  border-collapse: collapse;
   background-color: transparent;
 }
 caption {
